Make sure event list is possible to modify for selfless parent
Signed-off-by: Artur Biesiadowski <artur.biesiadowski@swirldslabs.com>